--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -62,11 +62,14 @@
   
   header h1 {
     font-size: 2.5rem;
+    color: white;
+
   }
   
   header h2 {
     font-weight: normal;
     font-size: 1.2rem;
+    color: white;
   }
   
   /* ===========================
