--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -42,9 +42,10 @@
   /* ===========================
      4. Tipografía
      =========================== */
-  h1, h2, h3, h4, h5 {
-    color: var(--primary-color);
+  body h1, body h2, body h3, body h4, body h5 {
+      color: var(--primary-color);
   }
+    
   
   p {
     margin-bottom: 1rem;
@@ -59,19 +60,6 @@
     padding: 2rem 1rem;
     text-align: center;
   }
-  
-  header h1 {
-    font-size: 2.5rem;
-    color: white;
-
-  }
-  
-  header h2 {
-    font-weight: normal;
-    font-size: 1.2rem;
-    color: white;
-  }
-  
   /* ===========================
      6. Secciones
      =========================== */
