--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -42,10 +42,7 @@
   /* ===========================
      4. Tipografía
      =========================== */
-  body h1, body h2, body h3, body h4, body h5 {
-      color: var(--primary-color);
-  }
-    
+
   
   p {
     margin-bottom: 1rem;
@@ -55,7 +52,7 @@
      5. Header
      =========================== */
   header {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     color: white;
     padding: 2rem 1rem;
     text-align: center;
