--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -52,10 +52,12 @@
      5. Header
      =========================== */
   header {
-    background-color: var(--secondary-color);
-    color: white;
-    padding: 2rem 1rem;
     text-align: center;
+    padding: 1rem;
+    background-color: var(--bg-color);
+    color: white;
+    margin-top: 2rem;
+    font-size: 0.9rem;
   }
   /* ===========================
      6. Secciones
