--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -54,7 +54,7 @@
   header {
     text-align: center;
     padding: 1rem;
-    background-color: var(--bg-color);
+    background-color: var(--primary-color);
     color: white;
     margin-top: 2rem;
     font-size: 0.9rem;
